refactor: substituir Collectors.toList() por toList() em streams